--- a/index.html
+++ b/index.html
@@ -1,27 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Integra INC – Consultoria Especializada em ERP Senior, Integrações e Sites</title>
-    <meta name="description" content="Consultoria especializada em ERP Senior, desenvolvimento de sites personalizados e integrações entre sistemas. Atendimento remoto para todo o Brasil." />
-    <meta name="author" content="Integra INC" />
-    <meta name="keywords" content="ERP Senior, consultoria ERP, integrações, webservices, desenvolvimento de sites, automação de processos" />
-    <link rel="canonical" href="https://integrainc.com.br" />
-    
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Integra INC – Consultoria Especializada" />
-    <meta property="og:description" content="Sites, integrações e consultoria em ERP Senior. Soluções sob medida para sua empresa." />
-    <meta property="og:site_name" content="Integra INC" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+   Integra Tech – Consultoria Especializada em ERP Senior, Integrações e Sites
+  </title>
+  <meta
+   name="description"
+   content="Consultoria especializada em ERP Senior, desenvolvimento de sites personalizados e integrações entre sistemas. Atendimento remoto para todo o Brasil."
+  />
+  <meta name="author" content="Integra Tech" />
+  <meta
+   name="keywords"
+   content="ERP Senior, consultoria ERP, integrações, webservices, desenvolvimento de sites, automação de processos"
+  />
+  <link rel="canonical" href="https://integrainc.com.br" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Integra INC – Consultoria Especializada" />
-    <meta name="twitter:description" content="Sites, integrações e consultoria em ERP Senior." />
+  <meta property="og:type" content="website" />
+  <meta
+   property="og:title"
+   content="Integra Tech – Consultoria Especializada"
+  />
+  <meta
+   property="og:description"
+   content="Sites, integrações e consultoria em ERP Senior. Soluções sob medida para sua empresa."
+  />
+  <meta property="og:site_name" content="Integra Tech" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta
+   name="twitter:title"
+   content="Integra Tech – Consultoria Especializada"
+  />
+  <meta
+   name="twitter:description"
+   content="Sites, integrações e consultoria em ERP Senior."
+  />
+
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+ </head>
+ <body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+ </body>
 </html>
