--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
  <head>
+  <!-- Open Graph / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://integratech-murex.vercel.app/" />
+  <meta property="og:title" content="IntegraTech - Integrações e Soluções" />
+  <meta
+   property="og:description"
+   content="Integrações com ERP, automações e soluções web sob medida."
+  />
+  <meta
+   property="og:image"
+   content="https://drive.google.com/file/d/1U-ONTKhJPjJ1-S_nUlEWPdHYhbcOz4Tu/view?usp=sharing"
+  />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter (ajuda alguns crawlers) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="IntegraTech - Integrações e Soluções" />
+  <meta
+   name="twitter:description"
+   content="Integrações com ERP, automações e soluções web sob medida."
+  />
+  <meta
+   name="twitter:image"
+   content="https://drive.google.com/file/d/1U-ONTKhJPjJ1-S_nUlEWPdHYhbcOz4Tu/view?usp=sharing"
+  />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
