--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   />
   <meta
    property="og:image"
-   content="https://drive.google.com/file/d/1U-ONTKhJPjJ1-S_nUlEWPdHYhbcOz4Tu/view?usp=sharing"
+   content="https://integratech-murex.vercel.app/whatsapp.png"
   />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -25,7 +25,7 @@
   />
   <meta
    name="twitter:image"
-   content="https://drive.google.com/file/d/1U-ONTKhJPjJ1-S_nUlEWPdHYhbcOz4Tu/view?usp=sharing"
+   content="https://integratech-murex.vercel.app/whatsapp.png"
   />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
