--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   />
   <meta
    property="og:image"
-   content="https://integratech-murex.vercel.app/whatsapp.png"
+   content="https://integratech-murex.vercel.app/og.png"
   />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -25,7 +25,7 @@
   />
   <meta
    name="twitter:image"
-   content="https://integratech-murex.vercel.app/whatsapp.png"
+   content="https://integratech-murex.vercel.app/og.png"
   />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,7 +41,7 @@
    name="keywords"
    content="ERP Senior, consultoria ERP, integrações, webservices, desenvolvimento de sites, automação de processos"
   />
-  <link rel="canonical" href="https://integrainc.com.br" />
+  <link rel="canonical" href="https://integratech-murex.vercel.app" />
 
   <meta property="og:type" content="website" />
   <meta
