--- a/index.html
+++ b/index.html
@@ -4,26 +4,35 @@
   <!-- Open Graph / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://integratech-murex.vercel.app/" />
-  <meta property="og:title" content="IntegraTech - Integrações e Soluções" />
+  <meta
+   property="og:title"
+   content="Integra Tech - Consultoria Especializada"
+  />
   <meta
    property="og:description"
-   content="Integrações com ERP, automações e soluções web sob medida."
+   content="Sites, integrações e consultoria em ERP Senior."
   />
   <meta
    property="og:image"
-   content="https://integratech-murex.vercel.app/og.png"
+   content="https://integratech-murex.vercel.app/og.jpg"
+  />
+  <meta
+   property="og:image:secure_url"
+   content="https://integratech-murex.vercel.app/og.jpg"
+  />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta
+   property="og:image:alt"
+   content="Integra Tech - Consultoria Especializada"
   />
 
-  <!-- Twitter (ajuda alguns crawlers) -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="IntegraTech - Integrações e Soluções" />
-  <meta
-   name="twitter:description"
-   content="Integrações com ERP, automações e soluções web sob medida."
-  />
   <meta
    name="twitter:image"
-   content="https://integratech-murex.vercel.app/og.png"
+   content="https://integratech-murex.vercel.app/og.jpg"
   />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
